# DataLingua

./: .gitignore  Makefile  agent.ts  cr.md  docker-compose.yml  nlu.md  readme.md  requirements.txt  template.ts
.github/: copilot-instructions.md
.github/chatmodes/: analyst.chatmode.md  architect.chatmode.md  bmad-master.chatmode.md  dev.chatmode.md  i人.chatmode.md  pm.chatmode.md  po.chatmode.md  qa.chatmode.md  qx.chatmode.md  sm.chatmode.md  tanstack-query.chatmode.md  ux-expert.chatmode.md  鼓励师.chatmode.md
agent-py/: .env  README.md  main.py  pyproject.toml  sql_agent_deprecated.py  test.html  what-I-want.puml
agent-py/agent/: image_reader_agent.py  sql_agent.py
agent-py/db/: connection.py
agent-py/prompt/: common.py  image_reader.py
be/: __init__.py  api.py  langgraph_workflow.py  llm.py  llm_client.py  llm_sqlcoder.py  main.py  nlu_node.py  nlu_prompt.py  service.py  sqlcoder_agent.py  sqlcoder_node.py  state.py  workflow.py
be/db/: db_service.py  metadata.sql
be/nlu/: llm_azure.py  nlu_node.py  nlu_prompt.md
be/sqlcoder/: [commentted]inference.py  llm_azure.py  llm_sqlcoder.py  prompt_sql.md  sqlcoder_node.py
db/: seed-db.js
db/model/: movies.js
docs/: architecture.md  prd.md  tech_desc.md
js/: agent.ts  package-lock.json  package.json  test.ts
js/db/: db.js  init-db.js
js/tools/: get_all_movies.ts  search_movies_belong_genre.ts  (+1 more)
tools/: get_all_movies.yaml  search_movies_belong_genre.yaml  search_movies_by_title_fuzzy.ts
web/: index.html  package-lock.json  package.json
web-dial/: package-lock.json  package.json
(+47 files in other folders)
